Move HE suite to centos8
Change-Id: Ia7dd1e84466dcd26c889acd4c362bdea7cd206e8
Signed-off-by: Galit Rosenthal <grosenth@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -24,6 +24,7 @@ stage:
         - compat-4.3_suite_master
         - he-basic-ipv6_suite_4.3
         - he-basic_suite_4.3
+        - he-basic_suite_master
         - he-basic-iscsi_suite_4.3
         - he-basic-role-remote_suite_4.3
         - he-node-ng_suite_4.3
