Move ansible master to centos8 with no reposync
Change-Id: I5341fa3932a897c3c23f14484d376a17bf3c5f10
Signed-off-by: Galit Rosenthal <grosenth@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -15,6 +15,7 @@ stage:
   - check-patch:
       timeout: 180m
       substage:
+        - ansible_suite_master
         - dr_suite_master
         - basic_suite_4.2
         - basic_suite_4.3
