--- a/common/yum-repos/ovirt-master-host-cq.repo.in
+++ b/common/yum-repos/ovirt-master-host-cq.repo.in
@@ -154,4 +154,25 @@ repo_gpgcheck=0
 enabled=1
 enabled_metadata=1
 
+[ovirt-master-copr-nmstate-git-fedora-el8]
+name=Copr repo for nmstate-stable owned by nmstate
+baseurl=https://copr-be.cloud.fedoraproject.org/results/nmstate/nmstate-git-fedora/epel-8-$basearch/
+type=rpm-md
+gpgcheck=1
+gpgkey=https://copr-be.cloud.fedoraproject.org/results/nmstate/nmstate-git-fedora/pubkey.gpg
+repo_gpgcheck=0
+enabled=1
+enabled_metadata=1
+
+[ovirt-master-copr-NetworkManager-1.20-el8]
+name=Copr repo for NetworkManager-1.20 owned by networkmanager
+baseurl=https://copr-be.cloud.fedoraproject.org/results/networkmanager/NetworkManager-1.20/epel-8-$basearch/
+type=rpm-md
+skip_if_unavailable=True
+gpgcheck=1
+gpgkey=https://copr-be.cloud.fedoraproject.org/results/networkmanager/NetworkManager-1.20/pubkey.gpg
+repo_gpgcheck=0
+enabled=1
+enabled_metadata=1
+
 ## end from release rpm
