--- a/common/yum-repos/ovirt-master-host-cq.repo.in
+++ b/common/yum-repos/ovirt-master-host-cq.repo.in
@@ -157,12 +157,12 @@ repo_gpgcheck=0
 enabled=1
 enabled_metadata=1
 
-[ovirt-master-copr-nmstate-git-fedora-el8]
-name=Copr repo for nmstate-stable owned by nmstate
-baseurl=https://copr-be.cloud.fedoraproject.org/results/nmstate/nmstate-git-fedora/epel-8-$basearch/
+[ovirt-master-copr-nmstate-0.1-el8]
+name=Copr repo for nmstate-0.1 owned by nmstate
+baseurl=https://copr-be.cloud.fedoraproject.org/results/nmstate/nmstate-0.1/epel-8-$basearch/
 type=rpm-md
 gpgcheck=1
-gpgkey=https://copr-be.cloud.fedoraproject.org/results/nmstate/nmstate-git-fedora/pubkey.gpg
+gpgkey=https://copr-be.cloud.fedoraproject.org/results/nmstate/nmstate-0.1/pubkey.gpg
 repo_gpgcheck=0
 enabled=1
 enabled_metadata=1
