--- a/he-basic-role-remote-suite-4.3/vars/main.yml
+++ b/he-basic-role-remote-suite-4.3/vars/main.yml
@@ -1,1 +1,6 @@
-../../he-basic-role-remote-suite-master/vars/main.yml
+templates:
+  storage: el7.7-base-2
+  host: el7.7-base-2
+hostCount: 2
+system_requirements:
+  disk_space_gb: 15
