--- a/common/yum-repos/ovirt-master-host-cq.repo.in
+++ b/common/yum-repos/ovirt-master-host-cq.repo.in
@@ -169,4 +169,15 @@ repo_gpgcheck=0
 enabled=1
 enabled_metadata=1
 
+[copr-fedorainfracloud.org-sbonazzo-AdvancedVirtualization]
+name=Copr repo for AdvancedVirtualization owned by sbonazzo
+baseurl=https://copr-be.cloud.fedoraproject.org/results/sbonazzo/AdvancedVirtualization/centos-stream-$basearch/
+type=rpm-md
+gpgcheck=1
+gpgkey=https://copr-be.cloud.fedoraproject.org/results/sbonazzo/AdvancedVirtualization/pubkey.gpg
+repo_gpgcheck=0
+enabled=1
+enabled_metadata=1
+module_hotfixes=1
+
 ## end from release rpm
