--- a/he-basic-suite-master/vars/main.yml
+++ b/he-basic-suite-master/vars/main.yml
@@ -1,6 +1,6 @@
 templates:
   storage: el7.6-base-5
-  host: el8-base-1
+  host: el8.1-base-beta-1
 hostCount: 2
 system_requirements:
   disk_space_gb: 20
