--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -42,6 +42,7 @@ domains:
       ovirt-engine-password: 123
       deploy-scripts:
         - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_sar_stat.sh
         {%- if install_storage_with_lago_deploy|default(true) %}
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_storage_unified_el7.sh
         {%- endif %}
@@ -87,6 +88,7 @@ domains:
     metadata:
       deploy-scripts:
         - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_sar_stat.sh
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_host_el7.sh
         {% if loop.first and install_ovirt_host|default(false) -%}
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_1st_host_el7.sh
