--- a/performance-suite-master/vars/main.yml
+++ b/performance-suite-master/vars/main.yml
@@ -1,5 +1,5 @@
 templates:
-  engine: el7.6-base-5
-  host: el8-base-1
+  engine: el7.7-base-2
+  host: el8.1-base-beta-1
 hostCount: 2
 create_local_repo: global_add_local_repo_no_ext_access.sh
