--- a/basic-suite-master/vars/main.yml
+++ b/basic-suite-master/vars/main.yml
@@ -1,5 +1,5 @@
 templates:
-  engine: el7.7-base-2
+  engine: el8.1-base-beta-1
   host: el8.1-base-beta-1
 hostCount: 2
 install_storage_with_lago_deploy: false
