--- a/network-suite-master/vars/main.yml
+++ b/network-suite-master/vars/main.yml
@@ -1,5 +1,5 @@
 templates:
-  engine: el7.7-base-2
+  engine: el8.1-base-beta-1
   host: el8.1-base-beta-1
 hostCount: 2
 create_local_repo: add_local_repo_no_ext_access.sh
