analyze_postgresql.sh: Adapt to el8 PG 10.6
- Use correct repo
- Add deps for pgbadger

Change-Id: I1686102709fffcae98ad6f517c5efe3e593dc8a2
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/common/yum-repos/ovirt-master-engine-cq.repo.in
+++ b/common/yum-repos/ovirt-master-engine-cq.repo.in
@@ -88,6 +88,8 @@ includepkgs=
     python3-lockfile
     python3-paramiko
     python3-pynacl
+    perl-Text-CSV_XS
+    perl-UNIVERSAL-isa
 exclude = archaius-core
     jackson-core
     jctools
