--- a/common/yum-repos/ovirt-master-engine-cq.repo.in
+++ b/common/yum-repos/ovirt-master-engine-cq.repo.in
@@ -88,6 +88,7 @@ includepkgs=
     python3-lockfile
     python3-paramiko
     python3-pynacl
+    python3-websocket-client
     perl-Text-CSV_XS
     perl-UNIVERSAL-isa
 exclude = archaius-core
