force PG12 and remove SCL PG
Change-Id: Ib759683858505495023040040343050455385079
Signed-off-by: emesika <emesika@redhat.com>
Signed-off-by: Martin Perina <mperina@redhat.com>

--- a/performance-suite-master/LagoInitFile.in
+++ b/performance-suite-master/LagoInitFile.in
@@ -50,7 +50,7 @@ domains:
           - /var/opt/rh/rh-postgresql95/lib/pgsql/data/pg_log
           - /var/cache/ovirt-engine
           - /var/log
-          - /var/lib/pgsql/upgrade_rh-postgresql95-postgresql.log
+          - /var/lib/pgsql/data/log
           - /var/lib/ovirt-engine/setup/answers
           - /etc/ovirt-engine
           - /etc/ovirt-engine-dwh
