--- a/common/yum-repos/ovirt-master-host-cq.repo.in
+++ b/common/yum-repos/ovirt-master-host-cq.repo.in
@@ -83,16 +83,16 @@ gpgkey=https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-8
 
 [ovirt-master-glusterfs-7-noarch-el8]
 name=GlusterFS 7 testing packages for $basearch
-baseurl=https://cbs.centos.org/repos/storage8-gluster-7-testing/$basearch/os/
+baseurl=https://buildlogs.centos.org/centos/8/storage/x86_64/gluster-7/
 enabled=1
 gpgcheck=0
 
-[ovirt-master-virt8-advanced-virtualization-candidate]
-name=Advanced Virtualization candidate packages for $basearch
-baseurl=https://cbs.centos.org/repos/virt8-advanced-virtualization-candidate/$basearch/os/
-enabled=1
+[ovirt-master-centos-advanced-virtualization-el8]
+name=CentOS-8 Advanced virtualization
+baseurl=https://buildlogs.centos.org/centos/8/virt/x86_64/advanced-virtualization/
 gpgcheck=0
-module_hotfixes=1
+enabled=1
+exclude=libvirt*
 
 [ovirt-master-virtio-win-latest-el8]
 name=virtio-win builds roughly matching what will be shipped in upcoming RHEL
@@ -151,9 +151,9 @@ enabled=1
 enabled_metadata=1
 module_hotfixes=1
 
-[ovirt-master-centos-ovirt44-testing]
-name=CentOS-8 - oVirt 4.4 - testing
-baseurl=http://cbs.centos.org/repos/virt8-ovirt-44-testing/$basearch/os/
+[ovirt-master-centos-ovirt44-el8]
+name=CentOS-8 - oVirt 4.4
+baseurl=https://buildlogs.centos.org/centos/8/virt/x86_64/ovirt-44/
 gpgcheck=0
 enabled=1
 
