--- a/common/yum-repos/ovirt-4.3-host-cq.in
+++ b/common/yum-repos/ovirt-4.3-host-cq.in
@@ -87,19 +87,11 @@ includepkgs=
 
 [centos-ovirt-4.3-el7]
 name = CentOS-7 - oVirt 4.3
-baseurl = http://cbs.centos.org/repos/virt7-ovirt-43-testing/x86_64/os/
+baseurl = https://buildlogs.centos.org/centos/7/virt/x86_64/ovirt-4.3/
 gpgcheck = 0
 enabled = 1
 ost_skip_injection = True
 exclude = ovirt-host*
-
-[centos-ovirt-common-el7]
-name = CentOS-7 - oVirt common
-baseurl = http://cbs.centos.org/repos/virt7-ovirt-common-testing/x86_64/os/
-gpgcheck = 0
-cost = 2000
-enabled = 1
-ost_skip_injection = True
 
 [centos-qemu-ev-testing-el7]
 name = CentOS-7 - QEMU EV - Testing
