--- a/basic-suite-master/vars/main.yml
+++ b/basic-suite-master/vars/main.yml
@@ -2,7 +2,7 @@ templates:
   engine: el8.1-base-beta-1
   host: el8.1-base-beta-1
 hostCount: 2
-install_storage_with_lago_deploy: false
+install_storage_with_lago_deploy: true
 install_ovirt_host: true
 system_requirements:
   disk_space_gb: 15
