ost-images: Initial commit
This patch adds an 'ost-images' sub-project. The project implements
a Makefile-based solution for building VM images continuously and packaging
them in RPMs. These images are meant to be used by OST. For more information
please see this devel thread [1].

[1] https://lists.ovirt.org/archives/list/devel@ovirt.org/thread/YUXDBHPGQ6E55W5AO7QIKQWXD5PGSLH5/

Change-Id: Id22b19b02e2b9b6d0f89d00eb0c0f9e96e23532c
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,24 @@ mocker-*
 *.retry
 failure_msg.txt
 **/ovirt-deploy/library
+
+# ost-images files
+###############
+ost-images/*.iso
+ost-images/*.ks
+ost-images/*.qcow2
+ost-images/*.qcow2.tmp
+ost-images/*.tar.gz
+ost-images/*-provision-*.sh
+ost-images/COPYING
+ost-images/INSTALL
+ost-images/Makefile
+ost-images/Makefile.in
+ost-images/aclocal.m4
+ost-images/autom4te.cache/
+ost-images/build-aux/
+ost-images/config.log
+ost-images/config.status
+ost-images/configure
+ost-images/install-sh
+ost-images/missing
