--- a/stdci.yaml
+++ b/stdci.yaml
@@ -67,6 +67,11 @@ stage:
   - build-artifacts:
       script:
         fromfile: 'automation/build-artifacts.sh'
+  - ost-images:
+      distributions:
+        - el8
+      script:
+        fromfile: 'automation/ost-images.sh'
 runtime-requirements:
   support-nesting-level: 2
   isolation_level: container
