we really should be installing vmconsole
it's the default.

Change-Id: I02590d9ee154842c80e493439131780caa2de78b
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/answer-files/el7_master.conf
+++ b/common/answer-files/el7_master.conf
@@ -38,7 +38,7 @@ OVESETUP_APACHE/configureSsl=bool:True
 OVESETUP_CONFIG/websocketProxyConfig=bool:True
 OVESETUP_ENGINE_CONFIG/fqdn=str:engine
 OVESETUP_CONFIG/sanWipeAfterDelete=bool:False
-OVESETUP_VMCONSOLE_PROXY_CONFIG/vmconsoleProxyConfig=bool:False
+OVESETUP_VMCONSOLE_PROXY_CONFIG/vmconsoleProxyConfig=bool:True
 OVESETUP_DWH_CORE/enable=bool:True
 OVESETUP_DWH_CONFIG/dwhDbBackupDir=str:/var/lib/ovirt-engine-dwh/backups
 OVESETUP_DWH_DB/database=str:ovirt_engine_history
